# tasty-discover

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.md  HLint.hs  LICENSE.md  Makefile  README.md  appveyor.yml  config.json  package.yaml  requirements.txt  stack.yaml  tasty-discover.cabal
docs/: conf.py  configuration.rst  contributing.rst  index.rst  install.rst  thanks.rst  usage.rst
example/: README.md  example.cabal  stack.yaml
example-usage/: README.md  example.cabal  package.yaml  stack.yaml
example-usage/test/: BarTest.hs
example-usage/test/AllTheFolders/: AnotherNestTest.hs
example-usage/test/Thing/AnotherThing/: NestedTest.hs
example/test/: BarTest.hs  FooTest.hs
exe/: Main.hs
executable/: Main.hs
integration-test/: Makefile  README.md  stack.yaml  tasty-discover-integration-test.cabal
integration-test/test-configurable-module/: FooMySuffix.hs  Tasty.hs
integration-test/test-configurable-module/Nested/: BarMySuffix.hs
integration-test/test-no-module-suffix/: SomeFoo.hs  Tasty.hs
integration-test/test/AllTheFolders/: AnotherNestTest.hs
integration-test/test/Thing/AnotherThing/: NestedTest.hs
source/: conf.py  contributing.rst  index.rst  thanks.rst  usage.rst
src/: Config.hs  Main.hs  Run.hs
src/Test/Tasty/: Config.hs  Discover.hs  Parse.hs  Prelude.hs  Run.hs  Type.hs  Util.hs
src/Test/Tasty/Discover/: Config.hs  Parse.hs  Run.hs  Type.hs  Util.hs
tasty-discover-example/: Makefile  README.md  stack.yaml  tasty-discover-example.cabal  tasty-discover-integration-test.cabal
tasty-discover-example/src/: Lib.hs
tasty-discover-example/test/: FooTest.hs
tasty-discover-example/test/AllTheFolders/: AnotherNestTest.hs
tasty-discover-example/test/Thing/AnotherThing/: NestedTest.hs
test/: CaseTest.hs  ConfigTest.hs  DiscoverTest.hs  ParseTest.hs  PropTest.hs  RunnerTest.hs  SCPropTest.hs  SomeOtherTest.hs  SomeTest.hs  TestSpec.hs  TreeTest.hs  UtilTest.hs
test/SubMod/: FooBaz.hs  PropTest.hs
test/SubMod/SubSubMod/: PropTest.hs
test/Tester/: TesterTest.hs
test/integration-test/: stack.yaml
test/integration-test/test-configurable-module/: FooMySuffix.hs
test/integration-test/test-ignore-module/: IgnoreMe.hs  Tasty.hs
test/integration-test/test-ignore-module/IgnoreMe/: Too.hs
test/integration-test/test-no-module-suffix/Nested/: AnotherBar.hs
test/tmpdir/: FooTest.hs
test/unit-test/: RunnerTest.hs  UtilTest.hs
test/unit-test/tmpdir/: README.md
