name:             tasty-discover
version:          0.0.2
license:          GPL
license-file:     LICENSE
copyright:        (c) 2016 Luke Murphy
author:           Luke Murphy <lukewm@riseup.net>
maintainer:       Luke Murphy <lukewm@riseup.net>
build-type:       Simple
cabal-version:    >= 1.10
category:         Testing
stability:        experimental
bug-reports:      https://github.com/lwm/tasty-discover/issues
homepage:         https://github.com/lwm/tasty-discover/
synopsis:         Automatically discover and run Tasty framework tests
description:      Automatically discover and run Tasty framework tests
                  .
                  <http://github.com/lwm/tasty-discover>

library
  ghc-options:
      -Wall
  exposed-modules:
    Test.Tasty.Discover
  other-modules:
    Test.Tasty.Config
    Test.Tasty.Parse
    Test.Tasty.Prelude
    Test.Tasty.Run
  build-depends:
    base == 4.*
    , filepath
    , directory
    , tasty
    , tasty-th
    , tasty-hunit
    , tasty-quickcheck
  hs-source-dirs:   src
  default-language: Haskell2010

executable tasty-discover
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  main-is:
      Main.hs
  other-modules:
      Test.Tasty.Config
      Test.Tasty.Discover
      Test.Tasty.Parse
      Test.Tasty.Prelude
      Test.Tasty.Run
  build-depends:
      base == 4.*
    , filepath
    , directory
    , tasty-discover
    , tasty-th
  default-language: Haskell2010

test-suite tasty-discover-unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tasty.hs
  other-modules:
    ParseTest
  build-depends:
      base == 4.*
    , tasty-discover
  default-language:    Haskell2010

Source-repository head
  type:     git
  location: git://github.com/lwm/tasty-discover.git
  subdir:   core
