name:             tasty-discover
version:          1.1.1
license:          GPL-3
license-file:     LICENSE.md
copyright:        (c) 2016 Luke Murphy
author:           Luke Murphy <lukewm@riseup.net>
maintainer:       Luke Murphy <lukewm@riseup.net>
build-type:       Simple
cabal-version:    >= 1.22
category:         Testing
stability:        Stable
bug-reports:      https://github.com/lwm/tasty-discover/issues
homepage:         https://github.com/lwm/tasty-discover/
synopsis:         Test discovery for the tasty framework.
description:      Test discovery for the tasty framework.
extra-source-files:
    integration-test/test-configurable-module/*.hs
    integration-test/test-configurable-module/Nested/*.hs
    integration-test/test-no-module-suffix/*.hs
    integration-test/test-no-module-suffix/Nested/*.hs
    example/test/*.hs
    example/test/AllTheFolders/*.hs
    example/test/Thing/AnotherThing/*.hs
    test/tmpdir/*.hs
    test/tmpdir/*.md

library
  ghc-options:
      -Wall
  exposed-modules:
    Test.Tasty.Discover
  other-modules:
    Test.Tasty.Config
    Test.Tasty.Parse
    Test.Tasty.Run
    Test.Tasty.Util
    Test.Tasty.Type
  build-depends:
      base             >= 4.9     && < 5.0
    , filepath         >= 1.4.1   && < 1.5
    , directory        >= 1.2.6   && < 1.3
    , tasty            >= 0.11    && < 1.12
    , tasty-th         >= 0.1.4   && < 0.2
    , tasty-hunit      >= 0.9.2   && < 0.10
    , tasty-quickcheck >= 0.8.4   && < 0.9
    , tasty-hspec      >= 1.1.3   && < 1.2
  hs-source-dirs: src
  default-language: Haskell2010

executable tasty-discover
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  main-is:
      Main.hs
  other-modules:
      Test.Tasty.Config
      Test.Tasty.Discover
      Test.Tasty.Parse
      Test.Tasty.Run
      Test.Tasty.Util
      Test.Tasty.Type
  build-depends:
      base == 4.*
    , filepath       >= 1.4.1   && < 1.5
    , directory      >= 1.2.6   && < 1.3
    , tasty-discover >= 1.1.1   && < 2.0
    , tasty-th       >= 0.1.4   && < 0.2
  default-language: Haskell2010

test-suite unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tasty.hs
  other-modules:
    ParseTest
    RunnerTest
    UtilTest
  build-depends:
      base == 4.*
    , tasty-discover
  default-language:    Haskell2010

Source-repository head
  type:     git
  location: git://github.com/lwm/tasty-discover.git
